feat(ui): Complete home page design with fixed top layout and scrollable content

--- a/app/src/main/res/navigation/bottom_nav_graph.xml
+++ b/app/src/main/res/navigation/bottom_nav_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/homeFragment"
-        android:name="com.shuvo6904.gozayaan.HomeFragment"
+        android:name="com.shuvo6904.gozayaan.presentation.home.screen.HomeFragment"
         android:label="fragment_home"
         tools:layout="@layout/fragment_home" />
 </navigation>
