--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -3,10 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
-    android:background="#1D2026"
+    android:background="@color/charcoal_black"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".HomeActivity">
+    tools:context=".presentation.home.HomeActivity">
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/navHostFragment"
         app:layout_constraintBottom_toTopOf="@+id/bottomNavigation"
