feat: Implement Home Page (Recommended) API call with ViewModel, Repository, and Use Case
- Added `HomeRepository` interface for API data handling.
- Implemented `HomeRepositoryImpl` to fetch recommended items from the API.
- Created `GetRecommendedLocationUseCase` to manage business logic for retrieving recommended items.
- Created HomeUseCase wrapper call for all home use case
- Developed `HomeViewModel` to fetch recommended items using the use case and expose them via `StateFlow` with UiState Sealed Class.
- Integrated the ViewModel with `RecommendedAdapter` to display data in the UI.
- Create RepositoryModule for DI

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -64,7 +64,6 @@
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginTop="@dimen/margin_top"
         android:fillViewport="true"
         android:scrollbars="none"
         android:overScrollMode="never"
@@ -81,6 +80,7 @@
                 android:layout_height="@dimen/_54sdp"
                 android:layout_marginHorizontal="@dimen/margin_horizontal"
                 android:layout_marginTop="@dimen/margin_top"
+                app:layout_constraintTop_toTopOf="parent"
                 android:background="@drawable/bg_search_layout">
 
                 <TextView
