--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <dimen name="px_10_text_size">@dimen/_9ssp</dimen>
     <dimen name="px_12_text_size">@dimen/_10ssp</dimen>
     <dimen name="px_13_text_size">@dimen/_11ssp</dimen>
     <dimen name="px_14_text_size">@dimen/_12ssp</dimen>
     <dimen name="px_16_text_size">@dimen/_14ssp</dimen>
     <dimen name="px_18_text_size">@dimen/_16ssp</dimen>
+    <dimen name="px_24_text_size">@dimen/_20ssp</dimen>
 
     <dimen name="margin_top">@dimen/_20sdp</dimen>
     <dimen name="margin_horizontal">@dimen/_20sdp</dimen>
@@ -13,9 +15,12 @@
     <dimen name="px_210">@dimen/_180sdp</dimen>
     <dimen name="px_230">@dimen/_200sdp</dimen>
     <dimen name="px_42">@dimen/_35sdp</dimen>
+    <dimen name="px_400">@dimen/_300sdp</dimen>
     <dimen name="recommended_radius_px_20">@dimen/_16sdp</dimen>
     <dimen name="corner_radius_px_30">@dimen/_25sdp</dimen>
     <dimen name="corner_radius_px_15">@dimen/_12sdp</dimen>
+    <dimen name="corner_radius_px_8">@dimen/_5sdp</dimen>
+    <dimen name="corner_radius_px_40">@dimen/_30sdp</dimen>
     <dimen name="popular_categories_width_px_70">@dimen/_60sdp</dimen>
     <dimen name="popular_categories_height_px_80">@dimen/_70sdp</dimen>
 </resources>
