--- a/app/src/main/res/layout/item_recommended_home.xml
+++ b/app/src/main/res/layout/item_recommended_home.xml
@@ -36,7 +36,7 @@
             app:layout_constraintStart_toStartOf="parent">
 
             <TextView
-                android:id="@+id/locationName"
+                android:id="@+id/propertyName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ellipsize="end"
@@ -57,7 +57,7 @@
                 android:fontFamily="@font/rubik_regular"
                 android:textColor="@android:color/white"
                 app:drawableStartCompat="@drawable/ic_map_pin"
-                app:layout_constraintTop_toBottomOf="@+id/locationName"
+                app:layout_constraintTop_toBottomOf="@+id/propertyName"
                 tools:text="India" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
