feat: Implement recommended activity design with API integration fix: Resolve home fragment design issues - Designed and implemented recommended activity layout. - Added functionality to fetch and set data from API for recommended activity. - Fixed layout issues in the home fragment to ensure proper alignment and styling.

--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -189,6 +189,8 @@
                 android:layout_height="wrap_content"
                 android:background="@drawable/bg_book_now_btn"
                 android:fontFamily="@font/rubik_medium"
+                android:textAllCaps="false"
+                android:includeFontPadding="false"
                 android:text="@string/book_now"
                 android:textColor="#1D2026"
                 android:textSize="@dimen/px_16_text_size"
