--- a/app/src/main/res/drawable/bg_back_btn.xml
+++ b/app/src/main/res/drawable/bg_back_btn.xml
@@ -1,5 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape android:shape="rectangle" xmlns:android="http://schemas.android.com/apk/res/android">
-    <corners android:radius="@dimen/corner_radius_px_8"/>
-    <solid android:color="#66F6F6F6"/>
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
+    <corners android:radius="@dimen/corner_radius_px_8" />
+    <solid android:color="#66F6F6F6" />
+    <padding
+        android:bottom="@dimen/_8sdp"
+        android:left="@dimen/_8sdp"
+        android:right="@dimen/_8sdp"
+        android:top="@dimen/_8sdp" />
 </shape>
