--- a/app/src/main/res/layout/item_popular_categories.xml
+++ b/app/src/main/res/layout/item_popular_categories.xml
@@ -1,33 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="@dimen/popular_categories_width_px_70"
-    android:layout_height="@dimen/popular_categories_height_px_80"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:padding="@dimen/_2sdp"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="@dimen/popular_categories_width_px_70"
+    android:layout_height="wrap_content"
     android:layout_marginEnd="@dimen/_10sdp"
-    android:background="@drawable/bg_top_categories_item">
+    android:foreground="?attr/selectableItemBackground"
+    android:background="@drawable/bg_top_categories_item"
+    android:minHeight="@dimen/popular_categories_height_px_80"
+    android:padding="@dimen/_2sdp">
+
     <ImageView
         android:id="@+id/categoryImage"
-        android:layout_width="wrap_content"
-        tools:src="@drawable/ic_flight"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        android:layout_width="@dimen/px_24"
+        android:layout_height="@dimen/px_24"
         android:layout_marginTop="@dimen/_15sdp"
-        android:layout_height="wrap_content"/>
+        android:contentDescription="@string/category_icon"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:src="@drawable/ic_flight" />
+
     <TextView
         android:id="@+id/categoryName"
         android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/_10sdp"
-        android:textSize="@dimen/px_13_text_size"
-        android:fontFamily="@font/gilroy_medium"
-        android:textColor="@color/white_90"
-        tools:text="Flight"
-        app:layout_constraintTop_toBottomOf="@+id/categoryImage"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:maxLines="1"
         android:ellipsize="end"
-        android:layout_height="wrap_content"/>
+        android:fontFamily="@font/gilroy_medium"
+        android:maxLines="1"
+        android:textColor="@color/white_90"
+        android:textSize="@dimen/px_13_text_size"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/categoryImage"
+        tools:text="Flight" />
 </androidx.constraintlayout.widget.ConstraintLayout>
