--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -37,27 +37,24 @@
             <me.relex.circleindicator.CircleIndicator2
                 android:id="@+id/customIndicator"
                 android:layout_width="wrap_content"
-                android:layout_height="@dimen/_10sdp"
-                android:layout_marginBottom="@dimen/_8sdp"
-                android:background="@drawable/bg_image_carousel_indicator"
-                android:paddingHorizontal="@dimen/_5sdp"
+                android:layout_height="@dimen/_12sdp"
+                android:layout_marginBottom="@dimen/_15sdp"
                 app:ci_animator="@animator/scale_with_alpha"
-                app:ci_drawable="@drawable/dot"
-                app:ci_drawable_unselected="@drawable/dot"
-                app:ci_height="4dp"
-                app:ci_width="4dp"
+                app:ci_drawable="@drawable/bg_selected_dot"
+                app:ci_drawable_unselected="@drawable/bg_unselected_dot"
+                app:ci_height="@dimen/px_5"
+                app:ci_width="@dimen/px_5"
                 app:layout_constraintBottom_toBottomOf="@+id/imageCarousel"
                 app:layout_constraintEnd_toEndOf="@+id/imageCarousel"
                 app:layout_constraintStart_toStartOf="@+id/imageCarousel" />
 
             <ImageView
                 android:id="@+id/backBtn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="@dimen/px_32"
+                android:layout_height="@dimen/px_32"
                 android:layout_margin="@dimen/margin_horizontal"
                 android:background="@drawable/bg_back_btn"
                 android:contentDescription="@string/back_button_icon"
-                android:padding="@dimen/_8sdp"
                 android:src="@drawable/ic_back"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -84,7 +81,7 @@
                 android:layout_marginEnd="@dimen/margin_horizontal"
                 android:drawablePadding="@dimen/_5sdp"
                 android:fontFamily="@font/rubik_regular"
-                android:textColor="@color/white"
+                android:textColor="@color/white_70"
                 android:textSize="@dimen/px_14_text_size"
                 app:drawableStartCompat="@drawable/ic_star"
                 app:layout_constraintBottom_toBottomOf="@id/propertyName"
@@ -100,7 +97,7 @@
                 android:layout_marginTop="@dimen/_5sdp"
                 android:drawablePadding="@dimen/_5sdp"
                 android:fontFamily="@font/rubik_regular"
-                android:textColor="@color/white"
+                android:textColor="@color/white_70"
                 android:textSize="@dimen/px_14_text_size"
                 app:drawableStartCompat="@drawable/ic_location"
                 app:layout_constraintTop_toBottomOf="@+id/propertyName"
@@ -129,6 +126,7 @@
                 android:layout_marginTop="@dimen/_10sdp"
                 android:fontFamily="@font/rubik_regular"
                 android:textColor="@color/white"
+                android:alpha="0.7"
                 android:textSize="@dimen/px_14_text_size"
                 app:layout_constraintTop_toBottomOf="@+id/aboutTheTrip"
                 tools:text="A luxurious experience in the heart of Kolkata with top-notch facilities." />
