--- a/app/src/main/res/layout/item_recommended_home.xml
+++ b/app/src/main/res/layout/item_recommended_home.xml
@@ -4,10 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_marginEnd="@dimen/_12sdp"
     app:cardCornerRadius="@dimen/recommended_radius_px_20"
     app:cardElevation="0dp"
-    app:strokeWidth="0dp">
+    app:strokeWidth="0dp"
+    tools:layout_marginEnd="@dimen/item_spacing">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="@dimen/px_210"
