--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    // For Text Size
     <dimen name="px_10_text_size">@dimen/_9ssp</dimen>
     <dimen name="px_12_text_size">@dimen/_10ssp</dimen>
     <dimen name="px_13_text_size">@dimen/_11ssp</dimen>
@@ -8,24 +9,30 @@
     <dimen name="px_18_text_size">@dimen/_15ssp</dimen>
     <dimen name="px_24_text_size">@dimen/_18ssp</dimen>
 
-    <dimen name="margin_top">@dimen/_20sdp</dimen>
-    <dimen name="margin_horizontal">@dimen/_20sdp</dimen>
+    // For Size
+    <dimen name="px_5">@dimen/_3sdp</dimen>
     <dimen name="px_14">@dimen/_12sdp</dimen>
+    <dimen name="px_17">@dimen/_12sdp</dimen>
     <dimen name="px_18">@dimen/_16sdp</dimen>
+    <dimen name="px_24">@dimen/_18sdp</dimen>
+    <dimen name="px_32">@dimen/_26sdp</dimen>
+    <dimen name="px_42">@dimen/_35sdp</dimen>
+    <dimen name="px_54">@dimen/_45sdp</dimen>
+    <dimen name="px_180">@dimen/_160sdp</dimen>
     <dimen name="px_210">@dimen/_180sdp</dimen>
     <dimen name="px_230">@dimen/_210sdp</dimen>
-    <dimen name="px_180">@dimen/_160sdp</dimen>
-    <dimen name="px_42">@dimen/_35sdp</dimen>
-    <dimen name="px_32">@dimen/_28sdp</dimen>
-    <dimen name="px_24">@dimen/_18sdp</dimen>
-    <dimen name="px_17">@dimen/_12sdp</dimen>
-    <dimen name="px_54">@dimen/_45sdp</dimen>
     <dimen name="px_400">@dimen/_300sdp</dimen>
+
+    <dimen name="corner_radius_px_8">@dimen/_5sdp</dimen>
+    <dimen name="corner_radius_px_15">@dimen/_12sdp</dimen>
     <dimen name="recommended_radius_px_20">@dimen/_16sdp</dimen>
     <dimen name="corner_radius_px_30">@dimen/_25sdp</dimen>
-    <dimen name="corner_radius_px_15">@dimen/_12sdp</dimen>
-    <dimen name="corner_radius_px_8">@dimen/_5sdp</dimen>
-    <dimen name="corner_radius_px_40">@dimen/_30sdp</dimen>
+    <dimen name="corner_radius_px_40">@dimen/_32sdp</dimen>
     <dimen name="popular_categories_width_px_70">@dimen/_60sdp</dimen>
     <dimen name="popular_categories_height_px_80">@dimen/_70sdp</dimen>
+
+    <dimen name="margin_horizontal">@dimen/_20sdp</dimen>
+    <dimen name="margin_top">@dimen/_20sdp</dimen>
+    <dimen name="first_item_spacing">@dimen/_20sdp</dimen>
+    <dimen name="item_spacing">@dimen/_11sdp</dimen>
 </resources>
